# learn4haskell

./: .gitignore  .gitpod.yml  .stylish-haskell.yaml  ARPL @vrom911  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  Fight.hs  Koch curve code for computer graphics students  Makefile  README.md  flake.nix  hie.yaml  learn4haskell-yebowhatsay.cabal.xxx  learn4haskell.cabal  path_fix  shell.nix  stack.yaml  test.hs
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  haskell.yml  main.yml
.history/: .gitignore_20201021201051  .gitignore_20201025210904  learn4haskell_20201021212651.cabal
.history/src/: Chapter1_20201021222228.hs  Chapter1_20201022153646.hs  Chapter1_20201022153737.hs  Chapter1_20201022153855.hs  Chapter1_20201022153941.hs  Chapter1_20201022154048.hs  Chapter1_20201022154114.hs  Chapter1_20201022214131.hs  Chapter1_20201022214853.hs  Chapter1_20201022220622.hs  Chapter1_20201022221128.hs  Chapter1_20201022221148.hs  Chapter1_20201022221324.hs  Chapter1_20201022221346.hs  Chapter1_20201022221812.hs  Chapter1_20201022221830.hs  Chapter1_20201022221850.hs  Chapter1_20201022221919.hs  Chapter1_20201022221937.hs  Chapter1_20201022222639.hs  Chapter1_20201022222915.hs  Chapter1_20201022223322.hs  Chapter1_20201022223331.hs  Chapter1_20201022223405.hs  Chapter1_20201022223418.hs  Chapter1_20201022223504.hs  Chapter1_20201022224336.hs  Chapter1_20201022225224.hs  Chapter1_20201022230125.hs  Chapter1_20201022230417.hs  Chapter1_20201022233504.hs  Chapter1_20201022233536.hs  Chapter1_20201022233658.hs  Chapter1_20201022233721.hs  Chapter1_20201022233754.hs  Chapter1_20201022234200.hs  Chapter1_20201022234235.hs  Chapter1_20201022234647.hs  Chapter1_20201022234713.hs  Chapter1_20201022235046.hs  (+31 more)
src/: Chapter1.hs  Chapter2.hs  Chapter3.hs  Chapter3T9.hs  Chapter4.hs  Fight.hs  Learn4haskell.hs  square-sum-task-3.hs
test/: DoctestChapter1.hs  DoctestChapter2.hs  DoctestChapter3.hs  DoctestChapter4.hs  QuickCheck.hs  Spec.hs
test/Test/: Chapter1.hs  Chapter1QC.hs  Chapter2.hs  Chapter3.hs  Chapter4.hs
