cabal-version:       2.4
name:                learn4haskell
version:             0.0.0.0
synopsis:            Learn Haskell basics in 4 pull requests
description:
    Learn Haskell basics in 4 pull requests.
    See [README.md](https://github.com/kowainik/learn4haskell#learn4haskell) for more details.
homepage:            https://github.com/kowainik/learn4haskell
bug-reports:         https://github.com/kowainik/learn4haskell/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Veronika Romashkina, Dmitrii Kovanikov
maintainer:          Kowainik <xrom.xkov@gmail.com>
copyright:           2020 Kowainik
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.10.2

source-repository head
  type:                git
  location:            https://github.com/kowainik/learn4haskell.git

common common-options
  build-depends:       base ^>= 4.14.0.0

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wpartial-fields
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Chapter1
                       Chapter2

test-suite learn4haskell-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       learn4haskell
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
