cabal-version:       2.4
name:                learn4haskell
version:             0.0.0.0
synopsis:            Learn Haskell basics in 4 pull requests
description:
    Learn Haskell basics in 4 pull requests.
    See [README.md](https://github.com/kowainik/learn4haskell#learn4haskell) for more details.
homepage:            https://github.com/kowainik/learn4haskell
bug-reports:         https://github.com/kowainik/learn4haskell/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Veronika Romashkina, Dmitrii Kovanikov
maintainer:          Kowainik <xrom.xkov@gmail.com>
copyright:           2020-2022 Kowainik
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.10.4
                     GHC == 9.0.2
                     GHC == 9.2.7
                     GHC == 9.4.7
                     GHC == 9.6.7
                     GHC == 9.8.4
                     GHC == 9.10.3
                     GHC == 9.12.2

source-repository head
  type:                git
  location:            https://github.com/kowainik/learn4haskell.git

common common-options
  build-depends:       base >= 4.14.0.0 && < 4.23

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wpartial-fields
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages
  if impl(ghc >= 9.0)
    ghc-options:       -Winvalid-haddock
  if impl(ghc >= 9.2)
    ghc-options:       -Woperator-whitespace
                       -Wredundant-bang-patterns
  if impl(ghc >= 9.4  && < 9.10)
    ghc-options:       -Wforall-identifier
  if impl(ghc >= 9.4)
    ghc-options:       -Wredundant-strictness-flags
  if impl(ghc >= 9.8)
    ghc-options:       -Wterm-variable-capture
                       -Winconsistent-flags
  if impl(ghc >= 9.10)
    ghc-options:       -Wincomplete-record-selectors
                       -Wdeprecated-type-abstractions
                       -Wdata-kinds-tc
                       -Wdefaulted-exception-context
  if impl(ghc >= 9.12)
    ghc-options:       -Wview-pattern-signatures

  default-language:    Haskell2010

common common-doctest
  import:              common-options
  hs-source-dirs:      test
  build-depends:       doctest >= 0.17 && < 0.25
  ghc-options:         -threaded

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Chapter1
                       Chapter2
                       Chapter3
                       Chapter4

test-suite learn4haskell-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Test.Chapter1
                       Test.Chapter2
                       Test.Chapter3
                       Test.Chapter4
  build-depends:       learn4haskell
                     , hspec >= 2.7.4 && < 2.12
                     , hspec-hedgehog
                     , hedgehog  >= 1.0.2 && < 2
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite doctest-chapter1
  import:              common-doctest
  type:                exitcode-stdio-1.0
  main-is:             DoctestChapter1.hs

test-suite doctest-chapter2
  import:              common-doctest
  type:                exitcode-stdio-1.0
  main-is:             DoctestChapter2.hs

test-suite doctest-chapter3
  import:              common-doctest
  type:                exitcode-stdio-1.0
  main-is:             DoctestChapter3.hs

test-suite doctest-chapter4
  import:              common-doctest
  type:                exitcode-stdio-1.0
  main-is:             DoctestChapter4.hs
